<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lgroup.ltms.PeriodDetail_Fragment"
    android:nestedScrollingEnabled="true">

    <!-- TODO: Update blank fragment layout -->






    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:background="#ffffffff"
        android:nestedScrollingEnabled="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/PeriodName"
            android:id="@+id/textView"
            android:padding="10dp"
            android:textDirection="rtl"
            android:singleLine="false"
            android:gravity="right"
            android:layout_above="@+id/textView2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/txtPeiod"
            android:paddingTop="10dp"
            android:textDirection="rtl"
            android:singleLine="false"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:gravity="right"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/textView2"
            android:layout_toStartOf="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/StartDate"
            android:id="@+id/textView2"
            android:textDirection="rtl"
            android:singleLine="false"
            android:padding="10dp"
            android:gravity="right"
            android:layout_above="@+id/textView3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/txtStartDate"
            android:layout_below="@+id/txtPeiod"
            android:layout_toLeftOf="@+id/textView2"
            android:paddingTop="10dp"
            android:singleLine="false"
            android:paddingBottom="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="10dp"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/EndDate"
            android:id="@+id/textView3"
            android:padding="10dp"
            android:gravity="right"
            android:layout_alignTop="@+id/txtEndDate"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/txtEndDate"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:gravity="right"
            android:layout_below="@+id/txtStartDate"
            android:layout_alignRight="@+id/txtPeiod"
            android:layout_alignEnd="@+id/txtPeiod" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/State"
            android:id="@+id/textView5"
            android:padding="10dp"
            android:gravity="right"
            android:layout_above="@+id/txtDesc"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Desc"
            android:id="@+id/textView6"
            android:padding="10dp"
            android:gravity="right"
            android:layout_alignTop="@+id/txtDesc"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/PeriodHours"
            android:id="@+id/textView7"
            android:padding="10dp"
            android:gravity="right"
            android:layout_below="@+id/textView6"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/txtState"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:gravity="right"
            android:layout_below="@+id/txtEndDate"
            android:layout_toLeftOf="@+id/textView2"
            android:layout_toStartOf="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/txtDesc"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:gravity="right"
            android:layout_below="@+id/txtState"
            android:layout_toLeftOf="@+id/textView2"
            android:layout_toStartOf="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/txtTestTime"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:gravity="right"
            android:layout_below="@+id/txtDesc"
            android:layout_toLeftOf="@+id/textView2"
            android:layout_toStartOf="@+id/textView2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PeriodStart"
            android:id="@+id/btnBeginLearning"
            android:layout_below="@+id/textView10"
            android:layout_alignRight="@+id/textView17"
            android:layout_alignEnd="@+id/textView17"
            android:layout_alignLeft="@+id/txtScore"
            android:layout_alignStart="@+id/txtScore" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/TestResult"
            android:id="@+id/textView17"
            android:padding="10dp"
            android:gravity="right"
            android:layout_below="@+id/textView7"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/txtTestResult"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:gravity="right"
            android:text="نامشخص"
            android:layout_alignTop="@+id/textView17"
            android:layout_toLeftOf="@+id/textView2"
            android:layout_toStartOf="@+id/textView2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendresult"
            android:id="@+id/btnSendResult"
            android:layout_below="@+id/txtScore"
            android:layout_toLeftOf="@+id/btnBeginLearning"
            android:layout_toStartOf="@+id/btnBeginLearning" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Score"
            android:id="@+id/textView10"
            android:layout_below="@+id/textView17"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/txtScore"
            android:layout_below="@+id/textView17"
            android:layout_toLeftOf="@+id/textView17"
            android:layout_toStartOf="@+id/textView17"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

    </RelativeLayout>
</FrameLayout>
