<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:soundEffectsEnabled="false"
    android:splitMotionEvents="false"
    android:scrollbars="horizontal|vertical"
    android:isScrollContainer="true"
    android:nestedScrollingEnabled="true"
    android:background="#00c8ff">



    <TextView
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/FirstName"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="right"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textSize="20dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/LastName"
        android:id="@+id/textView8"
        android:gravity="right"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_below="@+id/txtFirstName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/PhoneNumber"
        android:id="@+id/textView9"
        android:gravity="right"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_below="@+id/txtLastName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/NationNumber"
        android:id="@+id/textView14"
        android:gravity="right"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textSize="20dp"
        android:layout_alignTop="@+id/txtNationNumber"
        android:layout_alignLeft="@+id/textView16"
        android:layout_alignStart="@+id/textView16"
        android:textColor="#000000" />

    <TextView
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Email"
        android:id="@+id/textView16"
        android:gravity="right"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_below="@+id/txtNationNumber"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtFirstName"
        android:paddingTop="10dp"
        android:textDirection="rtl"
        android:singleLine="true"
        android:layout_alignTop="@+id/textView4"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_toStartOf="@+id/textView4"
        android:gravity="right"
        android:textColor="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtLastName"
        android:paddingTop="10dp"
        android:textDirection="rtl"
        android:singleLine="true"
        android:layout_below="@+id/txtFirstName"
        android:layout_toLeftOf="@+id/textView8"
        android:layout_toStartOf="@+id/textView8"
        android:gravity="right"
        android:textColor="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/txtMobileNumber"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:layout_below="@+id/txtLastName"
        android:layout_toLeftOf="@+id/textView9"
        android:layout_toStartOf="@+id/textView9"
        android:gravity="left"
        android:textColor="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtNationNumber"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:layout_below="@+id/txtMobileNumber"
        android:layout_toLeftOf="@+id/textView14"
        android:layout_toStartOf="@+id/textView14"
        android:gravity="left"
        android:textColor="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txtEmail"
        android:paddingTop="10dp"
        android:singleLine="false"
        android:layout_below="@+id/txtNationNumber"
        android:layout_toLeftOf="@+id/textView16"
        android:layout_toStartOf="@+id/textView16"
        android:gravity="left"
        android:textColor="#000000" />


</RelativeLayout>
